--- a/README.mkd
+++ b/README.mkd
@@ -1,3 +1,7 @@
+[![Build Status](https://travis-ci.org/lemieuxl/pybgen.svg?branch=master)](https://travis-ci.org/lemieuxl/pybgen)
+[![Coverage Status](https://coveralls.io/repos/github/lemieuxl/pybgen/badge.svg?branch=master)](https://coveralls.io/github/lemieuxl/pybgen?branch=master)
+[![PyPI version](https://badge.fury.io/py/pybgen.svg)](http://badge.fury.io/py/pybgen)
+
 
 # pybgen - Module to process BGEN files
 
